src/vm/snapshots/hebi__vm__tests__global_builtin_functions__to_float__bad_input.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
to_float({})


# Result:
Err(
    Vm(
        SpannedError {
            span: Span {
                start: 0,
                end: 0,
            },
            message: "cannot convert `<table>` to a float",
        },
    ),
)
