src/vm/snapshots/hebi__vm__tests__global_builtin_functions__to_float__int.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
to_float(10)


# Result:
Ok(
    Float(
        10.0,
    ),
)
